Refactoring to make auth service implementation clearer